fix spacing in project card

--- a/public/styles.css
+++ b/public/styles.css
@@ -386,7 +386,7 @@ html {
 .project-tag-div {
     height: auto;
     width: 100%;
-    padding: 0 3rem 3rem;
+    padding: 0 3rem 1rem;
 }
 
 .project-title-div {
